; ModuleID = '/home/carl/AnghaBench/mpv/video/out/extr_x11_common.c_xss_suspend.c'
source_filename = "/home/carl/AnghaBench/mpv/video/out/extr_x11_common.c_xss_suspend.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@True = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, i32)* @xss_suspend to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @xss_suspend(i32* %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  store i32* %0, i32** %4, align 8
  store i32 %1, i32* %5, align 4
  %10 = load i32*, i32** %4, align 8
  %11 = call i64 @XScreenSaverQueryExtension(i32* %10, i32* %6, i32* %7)
  %12 = load i64, i64* @True, align 8
  %13 = icmp ne i64 %11, %12
  br i1 %13, label %19, label %14

14:                                               ; preds = %2
  %15 = load i32*, i32** %4, align 8
  %16 = call i64 @XScreenSaverQueryVersion(i32* %15, i32* %8, i32* %9)
  %17 = load i64, i64* @True, align 8
  %18 = icmp ne i64 %16, %17
  br i1 %18, label %19, label %20

19:                                               ; preds = %14, %2
  store i32 0, i32* %3, align 4
  br label %34

20:                                               ; preds = %14
  %21 = load i32, i32* %8, align 4
  %22 = icmp slt i32 %21, 1
  br i1 %22, label %29, label %23

23:                                               ; preds = %20
  %24 = load i32, i32* %8, align 4
  %25 = icmp eq i32 %24, 1
  br i1 %25, label %26, label %30

26:                                               ; preds = %23
  %27 = load i32, i32* %9, align 4
  %28 = icmp slt i32 %27, 1
  br i1 %28, label %29, label %30

29:                                               ; preds = %26, %20
  store i32 0, i32* %3, align 4
  br label %34

30:                                               ; preds = %26, %23
  %31 = load i32*, i32** %4, align 8
  %32 = load i32, i32* %5, align 4
  %33 = call i32 @XScreenSaverSuspend(i32* %31, i32 %32)
  store i32 1, i32* %3, align 4
  br label %34

34:                                               ; preds = %30, %29, %19
  %35 = load i32, i32* %3, align 4
  ret i32 %35
}

declare dso_local i64 @XScreenSaverQueryExtension(i32*, i32*, i32*) #1

declare dso_local i64 @XScreenSaverQueryVersion(i32*, i32*, i32*) #1

declare dso_local i32 @XScreenSaverSuspend(i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
